# simple-compiler

./: .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project  eval.ml  eval_risc.ml  gen.ml  lexer.mll  main.ml  optimize.ml  parser.mly  register.ml  risc.ml  tinyL.ml
lib/: dune  tinyL.mli
lib/ast/: ast.ml  dune
lib/instructions/: dune  gen.ml  instructions.ml  optimize.ml  risc.ml
lib/interpreter/: dune  eval.ml  eval_risc.ml  interpreter.ml
lib/parsing/: dune  lexer.mll  parser.mly
src/: dune  main.ml
test/: dune  test.ml  test1.risc  test1.tyl  test2.risc  test2.tyl  test3.risc  test3.tyl  test4.risc  test4.tyl  test5.risc  test5.tyl  test6.risc  test6.tyl
